# file_uploader

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  desafio.md  docker-compose.yml  input.csv  pyproject.toml  pytest.ini  wait_for_db.sh
billing/: admin.py  admin_views.py  email_sender.py  invoice.py  models.py  tasks.py
billing/migrations/: 0001_initial.py  0002_alter_processingcheckpoint_status.py  0003_debt_email_sent_debt_invoice_generated.py  0004_debt_upload_id.py  0005_remove_debt_upload_id.py
billing/templates/admin/: upload.html
billing/tests/: test_tasks.py  test_views.py
file_uploader/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
file_uploader/management/commands/: create_superuser.py
templates/admin/: base_site.html
